// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableSelectField renders EditableSelectField correctly with editing disabled 1`] = `
<div
  className="mb-4 pgn__card pgn__card-light card"
  tabIndex={-1}
>
  <div
    className="pgn-transition-replace-group position-relative"
    style={
      {
        "height": null,
      }
    }
  >
    <div
      style={
        {
          "padding": ".1px 0",
        }
      }
    >
      <div
        className="pgn__card-header"
      >
        <div
          className="pgn__card-header-content"
        >
          <div
            className="pgn__card-header-title-md"
          >
            Main Label
          </div>
          <div
            className="pgn__card-header-subtitle-md"
          >
            <p
              className={null}
              data-hj-suppress={true}
            >
              Test Field
            </p>
          </div>
        </div>
        <div
          className="pgn__card-header-actions"
        >
          <div
            className="pgn__action-row"
          >
            <button
              className="btn btn-outline-primary"
              data-clicked="edit"
              data-testid="editable-field-edit"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="pgn__icon btn-icon-before"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m14.06 9.02.92.92L5.92 19H5v-.92l9.06-9.06ZM17.66 3c-.25 0-.51.1-.7.29l-1.83 1.83 3.75 3.75 1.83-1.83a.996.996 0 0 0 0-1.41l-2.34-2.34c-.2-.2-.45-.29-.71-.29Zm-3.6 3.19L3 17.25V21h3.75L17.81 9.94l-3.75-3.75Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Edit
            </button>
          </div>
        </div>
      </div>
      <div
        className="pgn__card-body"
      >
        <div
          className="pgn__card-section"
        >
          <p
            className="small text-muted mt-n2"
          >
            Default Confirmation Message
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditableSelectField renders EditableSelectField correctly with editing enabled 1`] = `
<div
  className="mb-4 pgn__card pgn__card-light card"
  tabIndex={-1}
>
  <div
    className="pgn-transition-replace-group position-relative"
    style={
      {
        "height": null,
      }
    }
  >
    <div
      style={
        {
          "padding": ".1px 0",
        }
      }
    >
      <div
        className="pgn__card-body"
      >
        <div
          className="pgn__card-section"
        >
          <form
            className=""
            onSubmit={[Function]}
          >
            <div
              className="pgn__form-group"
            >
              <label
                className="pgn__form-label h6 d-block"
                htmlFor="field-testField"
                size="sm"
              >
                Main Label
              </label>
              <div
                className="pgn__form-control-decorator-group"
              >
                <text
                  aria-describedby="field-testField-2"
                  className="has-value form-control is-invalid"
                  data-hj-suppress={true}
                  id="field-testField"
                  name="testField"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="Test Field"
                >
                  <option
                    value="defaultOption"
                  >
                    Default Option
                  </option>
                  <optgroup
                    label="User Options"
                  >
                    <option
                      value="suboption1"
                    >
                      Suboption 1
                    </option>
                  </optgroup>
                  <optgroup
                    label="Other Options"
                  >
                    <option
                      value="suboption2"
                    >
                      Suboption 2
                    </option>
                    <option
                      value="suboption3"
                    >
                      Suboption 3
                    </option>
                  </optgroup>
                </text>
              </div>
              <div
                className="pgn__form-text pgn__form-text-default"
              >
                <div>
                  Helpful Text
                </div>
              </div>
              <div
                className="pgn__form-control-description pgn__form-text pgn__form-text-invalid"
                id="field-testField-2"
              >
                <span
                  className="pgn__icon"
                >
                  <svg
                    aria-hidden={true}
                    fill="none"
                    focusable={false}
                    height={24}
                    role="img"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div />
              </div>
            </div>
            <p>
              <button
                aria-disabled={false}
                aria-live="assertive"
                className="pgn__stateful-btn pgn__stateful-btn-state-default mr-2 btn btn-primary"
                disabled={false}
                onClick={[Function]}
                type="submit"
              >
                <span
                  className="d-flex align-items-center justify-content-center"
                >
                  <span>
                    Save
                  </span>
                </span>
              </button>
              <button
                className="btn btn-outline-primary"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Cancel
              </button>
            </p>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditableSelectField renders EditableSelectField with an error 1`] = `
<div
  className="mb-4 pgn__card pgn__card-light card"
  tabIndex={-1}
>
  <div
    className="pgn-transition-replace-group position-relative"
    style={
      {
        "height": null,
      }
    }
  >
    <div
      style={
        {
          "padding": ".1px 0",
        }
      }
    >
      <div
        className="pgn__card-header"
      >
        <div
          className="pgn__card-header-content"
        >
          <div
            className="pgn__card-header-title-md"
          >
            Main Label
          </div>
          <div
            className="pgn__card-header-subtitle-md"
          >
            <p
              className={null}
              data-hj-suppress={true}
            >
              Test Field
            </p>
          </div>
        </div>
        <div
          className="pgn__card-header-actions"
        >
          <div
            className="pgn__action-row"
          >
            <button
              className="btn btn-outline-primary"
              data-clicked="edit"
              data-testid="editable-field-edit"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="pgn__icon btn-icon-before"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m14.06 9.02.92.92L5.92 19H5v-.92l9.06-9.06ZM17.66 3c-.25 0-.51.1-.7.29l-1.83 1.83 3.75 3.75 1.83-1.83a.996.996 0 0 0 0-1.41l-2.34-2.34c-.2-.2-.45-.29-.71-.29Zm-3.6 3.19L3 17.25V21h3.75L17.81 9.94l-3.75-3.75Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Edit
            </button>
          </div>
        </div>
      </div>
      <div
        className="pgn__card-body"
      >
        <div
          className="pgn__card-section"
        >
          <p
            className="small text-muted mt-n2"
          >
            Default Confirmation Message
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditableSelectField renders selectOptions when option does not have a group 1`] = `
<div
  className="mb-4 pgn__card pgn__card-light card"
  tabIndex={-1}
>
  <div
    className="pgn-transition-replace-group position-relative"
    style={
      {
        "height": null,
      }
    }
  >
    <div
      style={
        {
          "padding": ".1px 0",
        }
      }
    >
      <div
        className="pgn__card-header"
      >
        <div
          className="pgn__card-header-content"
        >
          <div
            className="pgn__card-header-title-md"
          >
            Main Label
          </div>
          <div
            className="pgn__card-header-subtitle-md"
          >
            <p
              className={null}
              data-hj-suppress={true}
            >
              Test Field
            </p>
          </div>
        </div>
        <div
          className="pgn__card-header-actions"
        >
          <div
            className="pgn__action-row"
          >
            <button
              className="btn btn-outline-primary"
              data-clicked="edit"
              data-testid="editable-field-edit"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="pgn__icon btn-icon-before"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m14.06 9.02.92.92L5.92 19H5v-.92l9.06-9.06ZM17.66 3c-.25 0-.51.1-.7.29l-1.83 1.83 3.75 3.75 1.83-1.83a.996.996 0 0 0 0-1.41l-2.34-2.34c-.2-.2-.45-.29-.71-.29Zm-3.6 3.19L3 17.25V21h3.75L17.81 9.94l-3.75-3.75Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Edit
            </button>
          </div>
        </div>
      </div>
      <div
        className="pgn__card-body"
      >
        <div
          className="pgn__card-section"
        >
          <p
            className="small text-muted mt-n2"
          >
            Default Confirmation Message
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditableSelectField renders selectOptions when option has a group 1`] = `
<div
  className="mb-4 pgn__card pgn__card-light card"
  tabIndex={-1}
>
  <div
    className="pgn-transition-replace-group position-relative"
    style={
      {
        "height": null,
      }
    }
  >
    <div
      style={
        {
          "padding": ".1px 0",
        }
      }
    >
      <div
        className="pgn__card-header"
      >
        <div
          className="pgn__card-header-content"
        >
          <div
            className="pgn__card-header-title-md"
          >
            Main Label
          </div>
          <div
            className="pgn__card-header-subtitle-md"
          >
            <p
              className={null}
              data-hj-suppress={true}
            >
              Test Field
            </p>
          </div>
        </div>
        <div
          className="pgn__card-header-actions"
        >
          <div
            className="pgn__action-row"
          >
            <button
              className="btn btn-outline-primary"
              data-clicked="edit"
              data-testid="editable-field-edit"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="pgn__icon btn-icon-before"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m14.06 9.02.92.92L5.92 19H5v-.92l9.06-9.06ZM17.66 3c-.25 0-.51.1-.7.29l-1.83 1.83 3.75 3.75 1.83-1.83a.996.996 0 0 0 0-1.41l-2.34-2.34c-.2-.2-.45-.29-.71-.29Zm-3.6 3.19L3 17.25V21h3.75L17.81 9.94l-3.75-3.75Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Edit
            </button>
          </div>
        </div>
      </div>
      <div
        className="pgn__card-body"
      >
        <div
          className="pgn__card-section"
        >
          <p
            className="small text-muted mt-n2"
          >
            Default Confirmation Message
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditableSelectField renders selectOptions with multiple groups 1`] = `
<div
  className="mb-4 pgn__card pgn__card-light card"
  tabIndex={-1}
>
  <div
    className="pgn-transition-replace-group position-relative"
    style={
      {
        "height": null,
      }
    }
  >
    <div
      style={
        {
          "padding": ".1px 0",
        }
      }
    >
      <div
        className="pgn__card-header"
      >
        <div
          className="pgn__card-header-content"
        >
          <div
            className="pgn__card-header-title-md"
          >
            Main Label
          </div>
          <div
            className="pgn__card-header-subtitle-md"
          >
            <p
              className={null}
              data-hj-suppress={true}
            >
              Test Field
            </p>
          </div>
        </div>
        <div
          className="pgn__card-header-actions"
        >
          <div
            className="pgn__action-row"
          >
            <button
              className="btn btn-outline-primary"
              data-clicked="edit"
              data-testid="editable-field-edit"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="pgn__icon btn-icon-before"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m14.06 9.02.92.92L5.92 19H5v-.92l9.06-9.06ZM17.66 3c-.25 0-.51.1-.7.29l-1.83 1.83 3.75 3.75 1.83-1.83a.996.996 0 0 0 0-1.41l-2.34-2.34c-.2-.2-.45-.29-.71-.29Zm-3.6 3.19L3 17.25V21h3.75L17.81 9.94l-3.75-3.75Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Edit
            </button>
          </div>
        </div>
      </div>
      <div
        className="pgn__card-body"
      >
        <div
          className="pgn__card-section"
        >
          <p
            className="small text-muted mt-n2"
          >
            Default Confirmation Message
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
